remobve filter
