# API/src/main/resources/api.yaml
@@ -182,7 +182,7 @@ paths:
       responses:
         '201':
           description: Single user deleted
-  /V1/reservations/{year}/{month}/{day}/{filter}:
+  /V1/reservations/{year}/{month}/{day}:
     get:
       tags:
         - Reservations
@@ -205,11 +205,6 @@ paths:
           schema:
             type: integer
         - name: day
-          in: path
-          required: true
-          schema:
-            type: integer
-        - name: filter
           in: path
           required: true
           schema:
